--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -1,225 +1,664 @@
 ---
-title: 'Booking'
-description: 'Description of your new file.'
+title: "Booking"
+description: "Description of your new file."
 icon: "circle-user"
 ---
-###       **3.3.4. Booking**
 
-**Bố cục**  
-Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm, bao gồm: Bố cục dọc, Bố cục ngang, Trượt ngang, Tab danh mục, Danh sách sản phẩm, Nhóm danh mục  
-![][image150]
+### **3.3.4. Booking**
+
+**Bố cục**\
+Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ**, bao gồm: **Bố cục dọc**, **Bố cục ngang**, **Trượt ngang**, **Tab danh mục**, **Danh sách dịch vụ**, **Nhóm danh mục**.
+
+<Frame caption="Bố cục Booking">
+  <img
+    src=""
+    alt="Các kiểu bố cục hiển thị Booking: dọc, ngang, trượt ngang, tab danh mục, danh sách, nhóm danh mục"
+    style={{ borderRadius:"0.5rem" }}
+    title="Bố cục Booking"
+  />
+</Frame>
+
+**Dữ liệu**
 
 **Thêm dữ liệu mới**
 
-* **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+<Steps>
+  <Step title="Nhấn vào nút Thêm dữ liệu mới">
+    Người dùng nhấn vào nút **"Thêm dữ liệu mới"** để bắt đầu thêm **danh mục dịch vụ**.
 
-![][image151]
+    <Frame caption="Nút thêm dữ liệu">
+      <img
+        src=""
+        alt="Nút thêm dữ liệu mới trong giao diện Booking"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
 
-* Nút thêm dữ liệu  
-  * **Bước 2:**  
-    * Người dùng nhập tên danh mục và chọn link liên kết  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho danh mục và banner danh mục  
-    * Và chọn danh mục con
+  <Step title="Nhập thông tin danh mục & chọn liên kết, hình ảnh, danh mục con">
+    - Nhập **tên danh mục** và chọn **link liên kết**  
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** cho **danh mục** và **banner danh mục**  
+    - Chọn **danh mục con** (nếu có)
 
-![][image152]
+    <Frame caption="Thêm dữ liệu cho danh mục Booking">
+      <img
+        src=""
+        alt="Giao diện nhập thông tin danh mục, banner và danh mục con cho Booking"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu danh mục Booking"
+      />
+    </Frame>
+  </Step>
 
-* Thêm dữ liệu dịch vụ  
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+  <Step title="Xác nhận thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để hoàn tất việc thêm danh mục,\
+    hoặc nhấn **“Hủy bỏ”** để hủy thao tác.
+  </Step>
+</Steps>
 
-![][image153]
+**Chỉnh sửa:**
 
-* Nút chỉnh sửa  
-  * **Bước 2:** Người dùng nhập tên danh mục và chọn link liên kết, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn danh mục con
+<Steps>
+  <Step title="Nhấn vào nút chỉnh sửa">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để mở **trang chỉnh sửa danh mục**.
 
-![][image154]
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src=""
+        alt="Nút chỉnh sửa danh mục Booking trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa danh mục"
+      />
+    </Frame>
+  </Step>
 
-* Trang chỉnh sửa dữ liệu  
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+  <Step title="Chỉnh sửa thông tin danh mục">
+    - Nhập **tên danh mục** và **link liên kết**  
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi **ảnh danh mục** và **banner danh mục**  
+    - Chọn lại **danh mục con** (nếu cần)
 
-![][image155]
+    <Frame caption="Trang chỉnh sửa dữ liệu Booking">
+      <img
+        src=""
+        alt="Giao diện chỉnh sửa danh mục, ảnh và danh mục con trong Booking"
+        style={{ borderRadius:"0.5rem" }}
+        title="Trang chỉnh sửa dữ liệu"
+      />
+    </Frame>
+  </Step>
 
-* Nút xóa  
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+  <Step title="Lưu chỉnh sửa hoặc hủy thao tác">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật,\
+    hoặc nhấn **“Hủy bỏ”** nếu không muốn lưu thay đổi.
+  </Step>
+</Steps>
+
+**Xóa:**
+
+<Steps>
+  <Step title="Nhấn vào nút xóa dữ liệu">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để **xóa danh mục** khỏi hệ thống.
+
+    <Frame caption="Nút xóa">
+      <img
+        src=""
+        alt="Nút xóa danh mục Booking trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa danh mục"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thoại xác nhận xuất hiện, người dùng chọn **“Xóa ngay”** để tiến hành xóa,\
+    hoặc chọn **“Hủy”** nếu không muốn thực hiện thao tác này.
+  </Step>
+</Steps>
 
 **Tiêu đề**
 
-	**Nền**
+**Nền**  
+- Chọn **màu nền** cho **tiêu đề dịch vụ** bằng cách nhấn ô vuông rồi chọn màu.
+<Frame caption="Tiêu đề dịch vụ">
+  <img
+    src=""
+    alt="Ví dụ hiển thị tiêu đề phần Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Tiêu đề Booking"
+  />
+</Frame>
+- Bật/tắt có **màu nền** hoặc **không có màu nền** bằng nút ![][image68].  
+- Xóa màu nền bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
 
-* Chọn màu nền cho tiêu đề dịch vụ bằng cách nhấn ô vuông ![][image156]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-  * Xóa màu nền bằng cách nhấn nút ![][image69]
+**Hiển thị tiêu đề**  
+- Nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt **có tiêu đề** và **không có tiêu đề**; có thể **nhập nội dung tiêu đề** (ví dụ: “Danh mục dịch vụ”).  
 
+<Frame caption="Tiêu đề dịch vụ">
+  <img
+    src=""
+    alt="Ví dụ hiển thị tiêu đề phần Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Tiêu đề Booking"
+  />
+</Frame>
 
-* **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử dịch vụ. Ví dụ, nếu tiêu đề là "Danh mục dịch vụ" thì tiêu đề sẽ như thế này
+**Cỡ chữ**  
+- Điều chỉnh **kích thước chữ** cho **tiêu đề** tại 
+<Frame caption="Tiêu đề dịch vụ">
+  <img
+    src=""
+    alt="Ví dụ hiển thị tiêu đề phần Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Tiêu đề Booking"
+  />
+</Frame>
 
-![][image157]
+**Màu chữ**  
+- Thay đổi **màu chữ tiêu đề** tại 
+<Frame caption="Tiêu đề dịch vụ">
+  <img
+    src=""
+    alt="Ví dụ hiển thị tiêu đề phần Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Tiêu đề Booking"
+  />
+</Frame>
 
-* Tiêu đề Dịch vụ  
-  *   
-* **Cỡ chữ:**  
-  * Người dùng có thể điều chỉnh kích thước cỡ chữ tại ![][image158]
-
-		**Màu chữ:**
-
-* Người dùng có thể điều chỉnh màu sắc cho tiêu đề của dịch vụ tại ![][image159]  
-* **Hiển thị icon:**  
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon và không có hiển thị icon 
+**Hiển thị icon**  
+- Bật/tắt **hiển thị icon** trong tiêu đề bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
 **Danh mục chính**
 
-* **Nền:**  
-  * Chọn màu nền cho danh mục chính bằng cách nhấn ô vuông ![][image156]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-    * Xóa màu nền bằng cách nhấn nút ![][image69]  
-    * 
+**Nền**  
+- Chọn **màu nền** cho **danh mục chính** bằng cách nhấn ô vuông rồi chọn màu
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>  
+- Bật/tắt màu nền bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.  
+- Xóa màu nền bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
 
-  	**Hiển thị icon/ hình ảnh:**
+**Hiển thị icon / hình ảnh**  
+- Bật/tắt **hiển thị icon/hình ảnh** cho danh mục chính bằng nút  <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon/ hình ảnh và không hiển thị icon/ hình ảnh  
-  	**Kích thước:**
+**Kích thước**  
+- Nhập hoặc tăng/giảm **kích thước** của danh mục chính tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-  Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image136]
+**Kiểu hình ảnh**  
+- Chọn **kiểu hình ảnh** cho danh mục chính tại
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-  	**Kiểu hình ảnh**
+**Bo góc**  
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  hoặc **chỉnh riêng lẻ từng góc** bằng nút 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-  Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+**Hiển thị tên danh mục**  
+- Bật/tắt **tên danh mục** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-		**Bo góc**
+**Kích thước / Màu sắc**  
+- Điều chỉnh **kích thước** và **màu sắc** cho danh mục chính tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của danh mục chính tại ô nhập ![][image140]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]
+**Hiển thị danh mục phụ**  
+- Bật/tắt **danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-		**Hiển thị tên danh mục:**
+**Danh mục phụ**
 
-* Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có tên danh mục và không có tên danh mục
+**Hiển thị tên**  
+- Bật/tắt **tên danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-		**Kích thước/ Màu sắc**:
+**Hiển thị hình ảnh**  
+- Bật/tắt **hình ảnh danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-* Người dùng có thể điều chỉnh kích thước và màu sắc cho danh mục chính tại ![][image160]
+**Banner**
 
-		**Hiển thị danh mục phụ**
+**Hiển thị banner**  
+- Bật/tắt **banner** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.  
-  *   
-* **Danh mục phụ**  
-  * **Hiển thị tên**   
-    * Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên và không có hiển thị tên.
+**Chiều cao**  
+- Nhập hoặc tăng/giảm **chiều cao** của banner tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-    **Hiển thị hình ảnh**
+**Lề ngoài**
 
-      Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hình ảnh và không có hiển thị hình ảnh.
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
 
-* **Banner**  
-  * **Hiển thị banner**  
-    * Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị banner và không có hiển thị banner.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-		**Chiều cao**
+- Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
 
-Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử banner ![][image161]
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* **Lề ngoài**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với các phần tử khác bằng nút ![][image162]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image163]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với lề màn hình điện thoại bằng nút ![][image164]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image165]  
-* **Lề trong**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image166]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image167]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image168]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image169]  
-* **Bo góc**
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
 
-  Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần tử banner tại ô nhập ![][image170]hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image171]
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* **Viền**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần tử banner tại ô nhập ![][image172]  
-  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image173]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image174]  
-  * Xóa viền bằng cách nhấn nút ![][image175]  
-* **Đổ bóng**  
-  * Người dùng có thể chọn độ lớn đổ bóng của phần tử banner tại ô ![][image176]  
-  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image177]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image178]  
-  * Xóa đổ bóng bằng cách nhấn nút ![][image179]
+**Lề trong**
 
-	**Thẻ dịch vụ**
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
 
-		**Lề ngoài**
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử thẻ dịch vụ với các phần tử khác bằng nút ![][image162]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image163]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử thẻ dịch vụ với lề màn hình điện thoại bằng nút ![][image164]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image165]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử thẻ dịch vụ với hình ảnh bên trong phần tử thẻ dịch vụ bằng nút ![][image166]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image167]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử thẻ dịch vụ với hình ảnh bên trong phần tử thẻ dịch vụ bằng nút ![][image168]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image169]
+- Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
 
-		**Chiều cao**
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử thẻ dịch vụ![][image161]
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
 
-		**Kiểu hình ảnh**
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
 
-* **Nền**  
-  * Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image137]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image138]  
-    * Xóa màu nền bằng cách nhấn nút ![][image139]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image140]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ dịch vụ tại ô nhập ![][image142]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image143]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image144]  
-    * Xóa viền bằng cách nhấn nút ![][image145]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của thẻ dịch vụ tại ô ![][image146]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image147]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image148]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image149]  
-  * **Hiển thị tên dịch vụ**:  
-    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên dịch vụ và không có tên dịch vụ  
-  * **Hiển thị danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
-  * **Hiển thị giá tiền:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có giá tiền và không có giá tiền  
-  * **Hiển thị giá giảm:**  
-    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
-  * **Sản phẩm Sale:**  
-    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
-  * **Hiển thị nhãn:**  
-    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
-  * **Hiển thị yêu thích:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
-  * **Hiển thị đánh giá:**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
-  * **Hiển thị loại dịch vụ:**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có loại dịch vụ và không có loại dịch vụ
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-		**Hiển thị thời gian dịch vụ:**
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
 
-Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có thời gian dịch vụ và không có thời gian dịch vụ
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
 
-* **Hiển thị số lượng yêu thích**  
-  *  Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-		**Hiển thị đánh giá:**
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
 
-Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có đánh giá và không có đánh giá
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-		**Hiển thị số lượng yêu thích:**
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
 
-Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* **Hiển thị số lượng đã bán:**  
-  * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
-  * **Hiển thị nút đặt lịch:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút đặt lịch và không có nút đặt lịch
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
 
-		**Kiểu nút đặt lịch:** 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-Người dùng có thể chọn chuyển đổi hiển thị nút đặt lịch giữa icon hoặc button ![][image118]
+- Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-		**Kiểu thẻ dịch vụ:** 
+**Thẻ dịch vụ**
 
-Người dùng có thể chọn chuyển đổi hiển thị thẻ dịch vụ giữa ngang hoặc dọc ![][image180]
+**Lề ngoài**
 
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Lề trong**
+
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Chiều cao**  
+- Nhập hoặc tăng/giảm **chiều cao** của **thẻ dịch vụ** tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Kiểu hình ảnh**  
+- Chọn **kiểu hình ảnh** của **thẻ dịch vụ** tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Nền**
+  - Chọn màu nền cho header bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Bật/tắt có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+**Hiển thị tên dịch vụ**  
+- Bật/tắt **Tên dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị danh mục**  
+- Bật/tắt **Danh mục** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị giá tiền**  
+- Bật/tắt **Giá tiền** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị giá giảm**  
+- Chọn **kiểu hiển thị giá giảm** (theo phần trăm hoặc giá gốc) tại <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Sản phẩm Sale**  
+- Bật/tắt **hiển thị sale** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị nhãn**  
+- Chọn **ẩn nhãn** hoặc hiển thị **FlashSale**, **Bán chạy**, **Mới nhất** tại 
+<Frame caption="Kiểu nút đặt lịch (icon / button)">
+  <img
+    src=""
+    alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Kiểu nút đặt lịch"
+  />
+</Frame>
+
+**Hiển thị yêu thích**  
+- Bật/tắt **nút yêu thích** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị đánh giá**  
+- Bật/tắt **số sao đánh giá** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị loại dịch vụ**  
+- Bật/tắt **loại dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị thời gian dịch vụ**  
+- Bật/tắt **thời gian dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị số lượng yêu thích**  
+- Bật/tắt **số lượng yêu thích** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị số lượng đã đặt**  
+- Bật/tắt **số lượng đã đặt/đã bán** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị nút đặt lịch**  
+- Bật/tắt **nút đặt lịch** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Kiểu nút đặt lịch**  
+- Chọn hiển thị **nút đặt lịch** ở dạng **icon** hoặc **button**.
+
+<Frame caption="Kiểu nút đặt lịch (icon / button)">
+  <img
+    src=""
+    alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
+    style={{ borderRadius:"0.5rem" }}
+    title="Kiểu nút đặt lịch"
+  />
+</Frame>
+
+**Kiểu thẻ dịch vụ**  
+- Chọn hiển thị **thẻ dịch vụ** theo **ngang** hoặc **dọc**.
+
+<Frame caption="Kiểu thẻ dịch vụ (ngang / dọc)">
+  <img
+    src=""
+    alt="Tùy chọn thẻ dịch vụ hiển thị theo chiều ngang hoặc dọc"
+    style={{ borderRadius:"0.5rem" }}
+    title="Kiểu thẻ dịch vụ"
+  />
+</Frame>
